Don't try to configure display color correction if not supported

Check that the display supports color correction before trying to apply
it to the hardware.

BUG=850182
TEST=Ran on device and verified NOTREACHED in
HardwareDisplayPlaneManagerLegacy isn't triggered.

Change-Id: I086e718e7ebfa8bbaf0286dac411ffee45a743ef
Reviewed-on: https://chromium-review.googlesource.com/1089858
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: Daniel Nicoara <dnicoara@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565389}
Former-commit-id: 0635a5ef1c7493c7ec3477587978c05a03af982a